# CAR-practica2

./: .gitignore  CMakeLists.txt  README.md  compile_and_run.sh  hash_test  main  main_O0  main_O3  run_full_suite.sh  run_hash_test.sh  to-do.txt
auxiliary-compilation-scripts/: compile_O0.sh  compile_O3.sh
image_example/: main.cpp
include/CAR-practica2/: convolution.hpp  image.hpp
other/carlos-example/: main.cpp
other/image_example/: main copy.cpp
other/speccpu-results/pablo-results/: CINT2000.001.raw  CINT2000.002.raw  CINT2000.005.asc  CINT2000.005.raw  log.003  log.004  log.005
src/: convolution.cpp  image.cpp  main.cpp
test/: test_hash_images.cpp
